# clinical-image-anonymizer

./: .dockerignore  .env.example  .gitignore  APPLY_INSTRUCTIONS.md  ARCHITECTURE.md  CHANGELOG.md  CITATION.cff  DECISIONS.md  DEVELOPER_NOTES.md  DISCLAIMER.md  Dockerfile  LICENSE  PROJECT_STATUS.md  README.md  TESTING.md  anonymize.py  clinical_image_anonymizer.spec  clinical_image_anonymizer_api.spec  clinical_image_anonymizer_cli.spec  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  tatus  version_info.txt
docs/: Clinical_Image_Anonymizer_ACTA_IT_Security_Review.md  build_installer.md  developer_guide.md  future_features.md  getting_started.md  installer_and_executables.md  legal_and_citation.md  rest_api.md  software_engineering_diagrams.md
installer/: clinical_image_anonymizer.iss
scripts/: run_api.py
scripts/maintenance/: README.md  inspect_installer_sources.ps1  inspect_metadata_sources.ps1  repo_audit.ps1  safe_cleanup.ps1
src/anonymization/: batch_validation.py  censoring.py  export.py  export_plan.py  image_io.py  image_writer.py  mapping_csv.py  metadata.py  pipeline.py  rectangle_draw.py  rectangle_filter.py  validators.py
src/api/: __init__.py  app.py  errors.py  routes.py  schemas.py  services.py
src/cli/: __init__.py  file_discovery.py  main.py  runner.py
src/common/: export_plan.py
src/webapp/: app.py  callbacks.py  event_registry.py  layout.py  layout_components.py  preview_rendering.py  rectangle_canvas.py  rectangle_interaction.py  rectangle_state.py  styles.css  ui_components.py  ui_constants.py
tests/: clinical_image_anonymizer_API_tests.txt  clinical_image_anonymizer_CLI_tests.txt  test_anonymization_smoke.py  test_api_smoke.py  test_export_anonymized_images.py  test_infrastructure_smoke.py  test_webapp_smoke.py
(+20 files in other folders)
