[project]
name = "clinical-image-anonymizer"
version = "0.1.0"
description = "Local-first clinical image anonymization tool."
readme = "README.md"
requires-python = ">=3.12,<3.13"

dependencies = [
    "gradio>=5.0,<6.0",
    "opencv-python>=4.10,<5.0",
    "numpy>=2.0,<3.0",
    "pillow>=10.0,<12.0",
    "tifffile>=2024.0",
    "piexif>=1.1,<2.0",
    "pydantic>=2.0,<3.0",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
